--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,18 @@
     <permission
         android:name="android.permission.ACCESS_COARSE_LOCATION"
         android:protectionLevel="dangerous" />
+
     <service android:name=".MyFirebaseMessagingService">
         <intent-filter>
-            <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            <action android:name="com.google.firebase.MESSAGING_EVENT" />
         </intent-filter>
     </service>
     <service android:name=".MyFirebaseInstanceIDService">
         <intent-filter>
-            <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
         </intent-filter>
     </service>
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -67,22 +69,22 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".EventDetailsActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".HomePage"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".IssueDetailsActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".ProfileActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".FollowActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".MapActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
@@ -91,23 +93,19 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".CreateEventActivity"
-            android:theme="@style/AppTheme">
-        </activity>
-
-        <activity android:name=".UserFeed"
-            android:theme="@style/AppTheme">
-        </activity>
-
-        <activity android:name=".MyEventsActivity"
-            android:theme="@style/AppTheme">
-        </activity>
+        <activity
+            android:name=".CreateEventActivity"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".UserFeed"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".MyEventsActivity"
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".ui.activities.SplashActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar.Splash">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar.Splash"></activity>
         <activity
             android:name=".ui.activities.ChatActivity"
             android:label="@string/app_name"
@@ -116,9 +114,9 @@
             android:name=".ui.activities.UserListingActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-
-
-
+        <activity android:name=".NotificationsActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
